@@ -1,6 +1,12 @@
 // Package HForms.Util
 if (!window.HForms) window.HForms = {};
 HForms.Util = (function () {
+   async function _showIfRequired(url, toggleField) {
+      const response = await fetch(url, { method: 'GET' });
+      const object = await response.json();
+      if (object['found']) toggleField.classList.remove('hide');
+      else toggleField.classList.add('hide');
+   }
    const focusFirst = function(className) {
       const forms = document.getElementsByTagName('form');
       if (!forms) return;
@@ -21,6 +27,14 @@ HForms.Util = (function () {
          if (document.readyState == 'complete') callback();
       });
    };
+   const showIfRequired = function(url, valueFieldName, toggleFieldName) {
+      const target = new URL(url);
+      target.searchParams.set(
+         'value', document.getElementById(valueFieldName).value
+      );
+      const toggleField = document.getElementById(toggleFieldName);
+      _showIfRequired(target, toggleField);
+   };
    const updateTimeWithZone = function(id) {
       const hours = document.getElementById(id + '_hours').value;
       const mins  = document.getElementById(id + '_mins').value;
@@ -32,6 +46,7 @@ HForms.Util = (function () {
    return {
       focusFirst: focusFirst,
       onReady: onReady,
+      showIfRequired: showIfRequired,
       updateTimeWithZone: updateTimeWithZone,
       wrapperIdPrefix: wrapperIdPrefix
    };
