@@ -88,8 +88,12 @@ form.classic {
             }
         }
     }
+    .input-field.hide {
+        display: none;
+    }
     .input-captcha input,
     .input-captcha .field-label,
+    .input-display .field-label,
     .field-label.select-multiple,
     .field-label.input-textarea {
         vertical-align: top;
@@ -122,7 +126,7 @@ form.classic {
         overflow: auto;
     }
     .input-display span {
-        padding-left: 0.25rem;
+        font-size: 0.8rem; padding-left: 0.25rem;
     }
     .input-button {
         display: flex; justify-content: right;
