@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - Adds Image field. Adds showIfRequired
           - Better styling on form errors
           - CSS fonts
           - Label and colon right CSS improved
